# cc_sim

./: .gitignore  Cargo.toml  README.md  bbr_config.yaml  build.rs  example_config.yaml
analysis/: instant_tcp_design.ipynb  stable_linear_tcp_design.ipynb
src/: base.rs  cc.rs  config.rs  copa.rs  copa2.rs  main.rs  random.rs  rtt_window.rs  simulator.rs  topology.rs  tracer.rs  transport.rs
src/bbr/: bbr.rs  map.c  map.h  simul.c  simul.h
src/bbr/linux_bbr/: ns-linux-c.h  ns-linux-util.cc  ns-linux-util.h
src/bbr/linux_bbr/src/: tcp_bbr.c
test_cases/: run_tests.py
tests/: agg.json  scratch.json  test-1.yaml  test-4.yaml  test-5.yaml  test-6.yaml
