[package]
name = "cc_sim"
version = "0.1.0"
authors = ["Venkat Arun <venkatar@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
bindgen = "0.52"

[dependencies]
cty = "0.2"
fnv = "1.0"
failure = "0.1"
priority-queue = "0.6"
gnuplot = "0.0"
rand = "0.7.3"
rand_distr = "0.2.2"
serde_yaml = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2.10"