[package]
name = "cc_sim"
version = "0.1.0"
authors = ["Venkat Arun <venkatar@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0"
failure = "0.1"
gnuplot = "0.0"
histogram = "0.6"
priority-queue = "0.6"
rand = "0.7.3"
rand_distr = "0.2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
